fix return type of get_all_mempool_items

--- a/src/full_node.yaml
+++ b/src/full_node.yaml
@@ -674,8 +674,8 @@ paths:
                   - type: object
                     properties:
                       mempool_items:
-                        type: array
-                        items:
+                        type: object
+                        additionalProperties:
                           $ref: "#/components/schemas/mempool_item"
                   - $ref: "#/components/schemas/apiResponse"
   /get_mempool_item_by_tx_id:
