--- a/src/schemas/farmer_rewards.yaml
+++ b/src/schemas/farmer_rewards.yaml
@@ -3,16 +3,21 @@ farmer_rewards:
   properties:
     farmed_amount:
       type: integer
+      example: 0
       format: uint64
     pool_reward_amount:
       type: integer
+      example: 0
       format: uint64
     farmer_reward_amount:
       type: integer
+      example: 0
       format: uint64
     fee_amount:
       type: integer
+      example: 0
       format: uint64
     last_height_farmed:
       type: integer
+      example: 0
       format: uint64
