add include_pending to get_mempool_item_by_tx_id

--- a/src/full_node.yaml
+++ b/src/full_node.yaml
@@ -698,6 +698,9 @@ paths:
                 tx_id:
                   type: string
                   format: hex
+                include_pending:
+                  type: boolean
+                  default: false
       responses:
         "200":
           description: OK
