nft_mint_nft returns nft_id

--- a/src/wallet.yaml
+++ b/src/wallet.yaml
@@ -924,6 +924,9 @@ paths:
                         format: uint32
                       spend_bundle:
                         $ref: "#/components/schemas/spend_bundle"
+                      nft_id:
+                        type: string
+                        format: hex
                   - $ref: "#/components/schemas/apiResponse"
   /nft_get_nfts:
     post:
