--- a/src/wallet.yaml
+++ b/src/wallet.yaml
@@ -835,11 +835,13 @@ paths:
                 allOf:
                   - type: object
                     properties:
-                      wallet_id:
-                        type: integer
-                        format: uint32
                       spend_bundle:
                         $ref: "#/components/schemas/spend_bundle"
+                      nft_id_list:
+                        type: array
+                        items:
+                          type: string
+                          format: hex
                   - $ref: "#/components/schemas/apiResponse"
   /nft_mint_nft:
     post:
