additional return values to add get_fee_estimate

--- a/src/full_node.yaml
+++ b/src/full_node.yaml
@@ -967,6 +967,12 @@ paths:
                   type: array
                   items:
                     type: integer
+                spend_type:
+                  type: integer
+                  format: uint64
+                spend_count:
+                  type: integer
+                  default: 1
       responses:
         "200":
           description: OK
@@ -990,9 +996,15 @@ paths:
                       mempool_size:
                         type: integer
                         format: uint64
+                      mempool_fees:
+                        type: integer
+                        format: uint64
                       mempool_max_size:
                         type: integer
                         format: uint64
+                      num_spends:
+                        type: integer
+                        format: int32
                       full_node_synced:
                         type: boolean
                       peak_height:
@@ -1001,6 +1013,17 @@ paths:
                       last_peak_timestamp:
                         type: integer
                         format: uint64
+                      last_block_cost:
+                        type: integer
+                        format: uint64
+                      fees_last_block:
+                        type: integer
+                        format: uint64
+                      fee_rate_last_block:
+                        type: number
+                      last_tx_block_height:
+                        type: integer
+                        format: uint32
                       node_time_utc:
                         type: integer
                         format: in32
