--- a/src/wallet.yaml
+++ b/src/wallet.yaml
@@ -3447,6 +3447,9 @@ paths:
                       signature:
                         type: string
                         format: hex
+                      signing_mode:
+                        type: string
+                        default: BLS_SIG_BLS12381G2_XMD:SHA-256_SSWU_RO_AUG:CHIP-0002_
                   - $ref: "#/components/schemas/apiResponse"
   /sign_message_by_id:
     post:
