add reuse_puzhash to send_transaction

--- a/src/wallet.yaml
+++ b/src/wallet.yaml
@@ -2768,6 +2768,8 @@ paths:
                   items:
                     type: string
                     format: hex
+                reuse_puzhash:
+                  type: boolean
       responses:
         "200":
           $ref: "#/components/responses/transaction_record_response"
