add is_hex to sign_message_by_address

--- a/src/wallet.yaml
+++ b/src/wallet.yaml
@@ -3473,6 +3473,9 @@ paths:
                   format: hex
                 message:
                   type: string
+                is_hex:
+                  type: boolean
+                  default: false
       responses:
         "200":
           description: OK
