add reuse_puzhash to did_update_recovery_ids

--- a/src/wallet.yaml
+++ b/src/wallet.yaml
@@ -1665,6 +1665,8 @@ paths:
                 num_verifications_required:
                   type: integer
                   format: uint64
+                reuse_puzhash:
+                  type: boolean
       responses:
         "200":
           $ref: "#/components/responses/empty"
