add solution to did_get_info return

--- a/src/wallet.yaml
+++ b/src/wallet.yaml
@@ -3950,6 +3950,8 @@ paths:
                       full_puzzle:
                         type: string
                         format: hex
+                      solution:
+                        type: string
                       hints:
                         type: array
                         items:
