--- a/src/wallet.yaml
+++ b/src/wallet.yaml
@@ -4094,6 +4094,8 @@ paths:
                   type: integer
                   format: uint64
                   default: 0
+                reuse_puzhash:
+                  type: boolean
       responses:
         "200":
           description: OK
