add reuse_puzhash to nft_get_info

--- a/src/wallet.yaml
+++ b/src/wallet.yaml
@@ -1257,6 +1257,8 @@ paths:
                 ignore_size_limit:
                   type: boolean
                   default: false
+                reuse_puzhash:
+                  type: boolean
       responses:
         "200":
           description: OK
